--- a/Template/List.html
+++ b/Template/List.html
@@ -44,6 +44,11 @@
             padding: 60px;
             background: lightblue;
         }
+        .Home img{
+            width: 450px;
+            height: 350px;
+            border-radius: 20px;
+        }
     </style>
 </head>
 <body>
@@ -63,10 +68,10 @@
                 <h4>Title : {{ x.title  }}</h4>
                 <h4>Summary : {{ x.discription }}</h4>
                 <h4>Year : {{x.year}}</h4>
-                <img src= "{{x.img}}" ></img>
+                <img src="{{ x.images.url}}" >
             </div>
+
             <div>
-                <img src="{{x.img}}" >
                 <h1><a href="{% url 'Edit' x.id %}">Edite</a>/<a href="{% url 'delete' x.id %}">Delete</a></h1>
             </div>
         {% endfor %}
